maybe finally fixed calendar not showing properly on mobile devices

--- a/styles/calendar.css
+++ b/styles/calendar.css
@@ -267,7 +267,7 @@
 }
 
 #search-results-days {
-	padding-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 .no-results-msg p {
